Fix layout overflow, git checks feature

--- a/src/components/info-section/InfoSection.module.scss
+++ b/src/components/info-section/InfoSection.module.scss
@@ -5,7 +5,7 @@
 .infoSection {
   display: grid;
   grid-auto-flow: column;
-  grid-column-gap: 2em;
+  grid-column-gap: 1.5em;
 }
 
 @media (min-width: map.get(layout.$breakpoints, limitMetricsSize)) {
